# pkg/handler/middleware.go
@@ -17,15 +17,14 @@ func (h *Handler) userIdentity(c *gin.Context) {
 		newErrorResponse(c, http.StatusUnauthorized, "empty header")
 		return
 	}
-
 	headerParts := strings.Split(header, " ")
-	if len(headerParts) != 2 {
-		// fmt.Println(headerParts)
-		newErrorResponse(c, http.StatusUnauthorized, "invalid auth header")
-		return
-	}
 
-	userId, err := h.service.Auth.ParseToken(headerParts[1])
+	// if len(headerParts) != 2 {
+	// 	newErrorResponse(c, http.StatusUnauthorized, "invalid auth header")
+	// 	return
+	// }
+
+	userId, err := h.service.Auth.ParseToken(headerParts[0])
 	if err != nil || userId == 0 {
 		newErrorResponse(c, http.StatusUnauthorized, err.Error())
 		return
